@@ -2,6 +2,11 @@ API ChangeLog	(see the ChangeLog in each 'apps' directory for
 		app specific changes
 
 
+25-Feb-2002     Troy A. Griffitts <scribe@crosswire.org>
+	Added chrislit's new gbs tools:
+		utilities/thml2gbs
+		utilities/imp2gbs
+
 18-Feb-2002     Troy A. Griffitts <scribe@crosswire.org>
 	Added dglassey's conditional reallocation of entrybuf to drivers
 	Added dglassey's update to makesystem for icu
